Fixing z-index issue

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -40,6 +40,7 @@ minimum-width()
                 font-style: italic
 
 #footer-panels
+    z-index: 10000
     font-family: Verdana, Geneva, sans-serif
     span.title
         display: inline-block
@@ -58,6 +59,9 @@ minimum-width()
         color: white
         border-radius 5px 5px 0 0 / 5px 5px 0 0
         display: none
+
+    #about-panel, #contact-panel
+        z-index: 10000
 
     #about-panel
         width: 600px
