--- a/app/styles/nav.styl
+++ b/app/styles/nav.styl
@@ -6,6 +6,7 @@
         width: 100%
         height: 150px
         float: left
+        z-index: 1000
 
     #header-graphic-wrap
         position: relative
@@ -15,6 +16,7 @@
 
     #header-graphic
         background: transparent url('/static/images/header_graphic.png')
+        z-index: 1001
         width: 950px
         margin: 0 auto
 
@@ -27,11 +29,13 @@
     position: relative
     width: 100%
     height: 155px
+    z-index: 1002
 
 .logo
     width: 950px
     height: 155px
     margin: 0 auto
+    z-index: 1002
 
     &.floating
         left: 50%
